エンドポイントの整備
