# src/controllers/chatsController.ts
@@ -1,4 +1,14 @@
-import { Body, Controller, Get, Path, Post, Query, Route, SuccessResponse } from 'tsoa/dist/index';
+import {
+  Body,
+  Controller,
+  Get,
+  Path,
+  Post,
+  Query,
+  Route,
+  SuccessResponse,
+  Tags,
+} from 'tsoa/dist/index';
 import { Chat, PrismaClient } from '@prisma/client';
 
 @Route('chats')
@@ -6,9 +16,10 @@ export class ChatsController extends Controller {
   prisma = new PrismaClient();
 
   /**
-   * @summary チャット一覧の取得
+   * @summary 指定したユーザーの全てのチャット一覧を取得
    */
   @Get('{userId}')
+  @Tags('Chat')
   public async getChats(@Path() userId: number) {
     const user = await this.prisma.user.findFirst({
       where: { id: userId },
