# tsoa/swagger.json
@@ -28,316 +28,21 @@
 				],
 				"type": "object"
 			},
-			"ChatCompletionTokenLogprob.TopLogprob": {
-				"properties": {
-					"token": {
-						"type": "string",
-						"description": "The token."
-					},
-					"bytes": {
-						"items": {
-							"type": "number",
-							"format": "double"
-						},
-						"type": "array",
-						"nullable": true,
-						"description": "A list of integers representing the UTF-8 bytes representation of the token.\nUseful in instances where characters are represented by multiple tokens and\ntheir byte representations must be combined to generate the correct text\nrepresentation. Can be `null` if there is no bytes representation for the token."
-					},
-					"logprob": {
-						"type": "number",
-						"format": "double",
-						"description": "The log probability of this token, if it is within the top 20 most likely\ntokens. Otherwise, the value `-9999.0` is used to signify that the token is very\nunlikely."
-					}
-				},
-				"required": [
-					"token",
-					"bytes",
-					"logprob"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ChatCompletionTokenLogprob": {
-				"properties": {
-					"token": {
-						"type": "string",
-						"description": "The token."
-					},
-					"bytes": {
-						"items": {
-							"type": "number",
-							"format": "double"
-						},
-						"type": "array",
-						"nullable": true,
-						"description": "A list of integers representing the UTF-8 bytes representation of the token.\nUseful in instances where characters are represented by multiple tokens and\ntheir byte representations must be combined to generate the correct text\nrepresentation. Can be `null` if there is no bytes representation for the token."
-					},
-					"logprob": {
-						"type": "number",
-						"format": "double",
-						"description": "The log probability of this token, if it is within the top 20 most likely\ntokens. Otherwise, the value `-9999.0` is used to signify that the token is very\nunlikely."
-					},
-					"top_logprobs": {
-						"items": {
-							"$ref": "#/components/schemas/ChatCompletionTokenLogprob.TopLogprob"
-						},
-						"type": "array",
-						"description": "List of the most likely tokens and their log probability, at this token\nposition. In rare cases, there may be fewer than the number of requested\n`top_logprobs` returned."
-					}
-				},
-				"required": [
-					"token",
-					"bytes",
-					"logprob",
-					"top_logprobs"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ChatCompletion.Choice.Logprobs": {
-				"description": "Log probability information for the choice.",
-				"properties": {
-					"content": {
-						"items": {
-							"$ref": "#/components/schemas/ChatCompletionTokenLogprob"
-						},
-						"type": "array",
-						"nullable": true,
-						"description": "A list of message content tokens with log probability information."
-					}
-				},
-				"required": [
-					"content"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ChatCompletionMessage.FunctionCall": {
-				"properties": {
-					"arguments": {
-						"type": "string",
-						"description": "The arguments to call the function with, as generated by the model in JSON\nformat. Note that the model does not always generate valid JSON, and may\nhallucinate parameters not defined by your function schema. Validate the\narguments in your code before calling your function."
-					},
-					"name": {
-						"type": "string",
-						"description": "The name of the function to call."
-					}
-				},
-				"required": [
-					"arguments",
-					"name"
-				],
-				"type": "object",
-				"additionalProperties": false,
-				"deprecated": true
-			},
-			"ChatCompletionMessageToolCall.Function": {
-				"description": "The function that the model called.",
-				"properties": {
-					"arguments": {
-						"type": "string",
-						"description": "The arguments to call the function with, as generated by the model in JSON\nformat. Note that the model does not always generate valid JSON, and may\nhallucinate parameters not defined by your function schema. Validate the\narguments in your code before calling your function."
-					},
-					"name": {
-						"type": "string",
-						"description": "The name of the function to call."
-					}
-				},
-				"required": [
-					"arguments",
-					"name"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ChatCompletionMessageToolCall": {
-				"properties": {
-					"id": {
-						"type": "string",
-						"description": "The ID of the tool call."
-					},
-					"function": {
-						"$ref": "#/components/schemas/ChatCompletionMessageToolCall.Function",
-						"description": "The function that the model called."
-					},
-					"type": {
-						"type": "string",
-						"enum": [
-							"function"
-						],
-						"nullable": false,
-						"description": "The type of the tool. Currently, only `function` is supported."
-					}
-				},
-				"required": [
-					"id",
-					"function",
-					"type"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ChatCompletionMessage": {
-				"description": "A chat completion message generated by the model.",
-				"properties": {
-					"content": {
-						"type": "string",
-						"nullable": true,
-						"description": "The contents of the message."
-					},
-					"role": {
-						"type": "string",
-						"enum": [
-							"assistant"
-						],
-						"nullable": false,
-						"description": "The role of the author of this message."
-					},
-					"function_call": {
-						"$ref": "#/components/schemas/ChatCompletionMessage.FunctionCall",
-						"deprecated": true
-					},
-					"tool_calls": {
-						"items": {
-							"$ref": "#/components/schemas/ChatCompletionMessageToolCall"
-						},
-						"type": "array",
-						"description": "The tool calls generated by the model, such as function calls."
-					}
-				},
-				"required": [
-					"content",
-					"role"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ChatCompletion.Choice": {
-				"properties": {
-					"finish_reason": {
-						"type": "string",
-						"enum": [
-							"stop",
-							"length",
-							"tool_calls",
-							"content_filter",
-							"function_call"
-						],
-						"description": "The reason the model stopped generating tokens. This will be `stop` if the model\nhit a natural stop point or a provided stop sequence, `length` if the maximum\nnumber of tokens specified in the request was reached, `content_filter` if\ncontent was omitted due to a flag from our content filters, `tool_calls` if the\nmodel called a tool, or `function_call` (deprecated) if the model called a\nfunction."
-					},
-					"index": {
-						"type": "number",
-						"format": "double",
-						"description": "The index of the choice in the list of choices."
-					},
-					"logprobs": {
-						"allOf": [
-							{
-								"$ref": "#/components/schemas/ChatCompletion.Choice.Logprobs"
-							}
-						],
-						"nullable": true,
-						"description": "Log probability information for the choice."
-					},
-					"message": {
-						"$ref": "#/components/schemas/ChatCompletionMessage",
-						"description": "A chat completion message generated by the model."
-					}
-				},
-				"required": [
-					"finish_reason",
-					"index",
-					"logprobs",
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"CompletionUsage": {
-				"description": "Usage statistics for the completion request.",
-				"properties": {
-					"completion_tokens": {
-						"type": "number",
-						"format": "double",
-						"description": "Number of tokens in the generated completion."
-					},
-					"prompt_tokens": {
-						"type": "number",
-						"format": "double",
-						"description": "Number of tokens in the prompt."
-					},
-					"total_tokens": {
-						"type": "number",
-						"format": "double",
-						"description": "Total number of tokens used in the request (prompt + completion)."
-					}
-				},
-				"required": [
-					"completion_tokens",
-					"prompt_tokens",
-					"total_tokens"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ChatCompletion": {
-				"description": "Represents a chat completion response returned by model, based on the provided\ninput.",
-				"properties": {
-					"id": {
-						"type": "string",
-						"description": "A unique identifier for the chat completion."
-					},
-					"choices": {
-						"items": {
-							"$ref": "#/components/schemas/ChatCompletion.Choice"
-						},
-						"type": "array",
-						"description": "A list of chat completion choices. Can be more than one if `n` is greater\nthan 1."
-					},
-					"created": {
-						"type": "number",
-						"format": "double",
-						"description": "The Unix timestamp (in seconds) of when the chat completion was created."
-					},
-					"model": {
-						"type": "string",
-						"description": "The model used for the chat completion."
-					},
-					"object": {
-						"type": "string",
-						"enum": [
-							"chat.completion"
-						],
-						"nullable": false,
-						"description": "The object type, which is always `chat.completion`."
-					},
-					"system_fingerprint": {
-						"type": "string",
-						"description": "This fingerprint represents the backend configuration that the model runs with.\n\nCan be used in conjunction with the `seed` request parameter to understand when\nbackend changes have been made that might impact determinism."
-					},
-					"usage": {
-						"$ref": "#/components/schemas/CompletionUsage",
-						"description": "Usage statistics for the completion request."
-					}
-				},
-				"required": [
-					"id",
-					"choices",
-					"created",
-					"model",
-					"object"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"askProps": {
 				"properties": {
-					"prompt": {
+					"systemMessage": {
 						"type": "string"
+					},
+					"userMessage": {
+						"type": "string"
+					},
+					"chatId": {
+						"type": "number",
+						"format": "double"
 					}
 				},
 				"required": [
-					"prompt"
+					"userMessage"
 				],
 				"type": "object"
 			}
@@ -369,6 +74,10 @@
 						}
 					}
 				},
+				"summary": "指定したIDのユーザー情報を取得",
+				"tags": [
+					"User"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -392,6 +101,9 @@
 					}
 				},
 				"summary": "ユーザーの作成",
+				"tags": [
+					"User"
+				],
 				"security": [],
 				"parameters": []
 			}
@@ -405,13 +117,25 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ChatCompletion"
+									"type": "string"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"chatId": 1,
+											"systemMessage": "厳かな感じでお願いします。",
+											"userMessage": "こんにちは"
+										}
+									}
 								}
 							}
 						}
 					}
 				},
 				"summary": "OpenAIにリクエスト送信",
+				"tags": [
+					"OpenAI"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -453,7 +177,10 @@
 						}
 					}
 				},
-				"summary": "メッサージの取得",
+				"summary": "指定したチャット内の全てのメッサージを取得",
+				"tags": [
+					"Message"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -496,7 +223,10 @@
 						}
 					}
 				},
-				"summary": "単一メッセージの取得",
+				"summary": "指定したIDのメッセージを取得",
+				"tags": [
+					"Message"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -528,7 +258,10 @@
 						"description": "Created"
 					}
 				},
-				"summary": "単一メッセージの作成",
+				"summary": "メッセージの作成",
+				"tags": [
+					"Message"
+				],
 				"security": [],
 				"parameters": []
 			}
@@ -560,7 +293,10 @@
 						}
 					}
 				},
-				"summary": "チャット一覧の取得",
+				"summary": "指定したユーザーの全てのチャット一覧を取得",
+				"tags": [
+					"Chat"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -599,7 +335,10 @@
 						}
 					}
 				},
-				"summary": "単一チャットの取得",
+				"summary": "指定したIDのチャット情報を取得",
+				"tags": [
+					"Chat"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -623,7 +362,10 @@
 						"description": "Created"
 					}
 				},
-				"summary": "単一チャットの作成",
+				"summary": "チャットの作成",
+				"tags": [
+					"Chat"
+				],
 				"security": [],
 				"parameters": []
 			}
